--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "dependencies": {
     "@popperjs/core": "^2.9.1",
     "animate.css": "^4.1.1",
+    "axios": "^0.21.1",
     "bootstrap": "^5.0.0-beta2",
     "bootstrap-vue": "^2.21.2",
-    "vue-router": "^4.0.5",
     "vue": "^3.0.7",
+    "vue-router": "^4.0.5",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
