--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "bootstrap-vue": "^2.21.2",
     "vue": "^3.0.7",
     "vue-router": "^4.0.5",
-    "vuex": "^4.0.0-0"
+    "vuex": "^4.0.0-0",
+    "vuex-persistedstate": "^4.0.0-beta.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-eslint": "~4.5.0",
