--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0-beta2",
     "bootstrap-vue": "^2.21.2",
+    "express": "^4.17.1",
+    "serve-static": "^1.14.1",
     "vue": "^3.0.7",
     "vue-router": "^4.0.5",
     "vuex": "^4.0.0-0",
