--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "serve-static": "^1.14.1",
     "vue": "^3.0.7",
     "vue-router": "^4.0.5",
+    "vue-sweetalert2": "^4.3.1",
     "vuex": "^4.0.0-0",
     "vuex-persistedstate": "^4.0.0-beta.3"
   },
